--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -5396,6 +5396,16 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
   Timestamp                = {2015.07.30}
 }
 
+@article{Matzke2012,
+  title                     = {Founder-event speciation in BioGeoBEARS package dramatically improves likelihoods and alters parameter inference in dispersal--extinction--cladogenesis DEC analyses},
+  author                    = {Matzke, Nicholas J},
+  journal                   = {Frontiers of Biogeography},
+  volume                    = {4},
+  pages                     = {210},
+  year                      = {2012}
+}
+
+
 @Article{Mau1997,
   Title                    = {Phylogenetic Inference for Binary Data on Dendograms Using Markov Chain Monte Carlo},
   Author                   = {Mau, Bob and Newton, Michael A.},
@@ -7222,6 +7232,17 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
   Owner                    = {shhn001},
   Review                   = {Symmetric Difference},
   Timestamp                = {2007.09.26}
+}
+
+@article{Robinson2003,
+  title                    = {Protein evolution with dependence among codons due to tertiary structure},
+  author                   = {Robinson, Douglas M and Jones, David T and Kishino, Hirohisa and Goldman, Nick and Thorne, Jeffrey L},
+  journal                  = {Molecular Biology and Evolution},
+  volume                   = {20},
+  number                   = {10},
+  pages                    = {1692--1704},
+  year                     = {2003},
+  publisher                = {SMBE}
 }
 
 @Article{Rodrigue2008,
