--- a/tutorial_TeX/preamble.tex
+++ b/tutorial_TeX/preamble.tex
@@ -24,6 +24,7 @@
 \usepackage{float}
 \usepackage[caption = false]{subfig}
 \usepackage{fancybox}
+\usepackage{fixltx2e}
 
 %\usepackage[backend=bibtex,hyperref=true,citestyle=authoryear,bibstyle=authortitle,firstinits=true,terseinits=true,doi=false,url=false,maxbibnames=10,maxcitenames=2]{biblatex}
 %\addbibresource{../bib_tex/master_refs.bib}
