update bg tutorial

--- a/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial.tex
+++ b/tutorial_TeX/RB_Biogeography_Tutorial/RB_Biogeography_Tutorial.tex
@@ -24,7 +24,7 @@
 \input{RB_Biogeography_Tutorial_2_content}
 \input{RB_Biogeography_Tutorial_3_content}
 
-\bibliography{bayes}
+\bibliography{refs}
 
 Version dated: \today
 
