--- a/tutorial_TeX/refs.bib
+++ b/tutorial_TeX/refs.bib
@@ -5396,15 +5396,15 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
   Timestamp                = {2015.07.30}
 }
 
-@article{Matzke2012,
-  title                     = {Founder-event speciation in BioGeoBEARS package dramatically improves likelihoods and alters parameter inference in dispersal--extinction--cladogenesis DEC analyses},
-  author                    = {Matzke, Nicholas J},
-  journal                   = {Frontiers of Biogeography},
-  volume                    = {4},
-  pages                     = {210},
-  year                      = {2012}
-}
+@Article{Matzke2012,
+  Title                    = {Founder-event speciation in BioGeoBEARS package dramatically improves likelihoods and alters parameter inference in dispersal--extinction--cladogenesis DEC analyses},
+  Author                   = {Matzke, Nicholas J},
+  Year                     = {2012},
+  Pages                    = {210},
+  Volume                   = {4},
 
+  Journal                  = {Frontiers of Biogeography}
+}
 
 @Article{Mau1997,
   Title                    = {Phylogenetic Inference for Binary Data on Dendograms Using Markov Chain Monte Carlo},
@@ -5653,6 +5653,20 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
   Owner                    = {hoehna},
   Publisher                = {JSTOR},
   Timestamp                = {2013.12.14}
+}
+
+@Article{Moore2016,
+  Title                    = {{Critically evaluating the theory and performance of Bayesian analysis of macroevolutionary mixtures}},
+  Author                   = {Moore, Brian R and H{\"o}hna, Sebastian and May, Michael R and Rannala, Bruce and Huelsenbeck, John P},
+  Year                     = {2016},
+  Number                   = {34},
+  Pages                    = {9569--9574},
+  Volume                   = {113},
+
+  Journal                  = PNAS,
+  Owner                    = {hoehna},
+  Publisher                = {National Acad Sciences},
+  Timestamp                = {2016.10.04}
 }
 
 @Article{Moore2006,
@@ -7234,15 +7248,16 @@ Their algorithms are available in BAMBE (Bayesian Analysis in Molecular Biology 
   Timestamp                = {2007.09.26}
 }
 
-@article{Robinson2003,
-  title                    = {Protein evolution with dependence among codons due to tertiary structure},
-  author                   = {Robinson, Douglas M and Jones, David T and Kishino, Hirohisa and Goldman, Nick and Thorne, Jeffrey L},
-  journal                  = {Molecular Biology and Evolution},
-  volume                   = {20},
-  number                   = {10},
-  pages                    = {1692--1704},
-  year                     = {2003},
-  publisher                = {SMBE}
+@Article{Robinson2003,
+  Title                    = {Protein evolution with dependence among codons due to tertiary structure},
+  Author                   = {Robinson, Douglas M and Jones, David T and Kishino, Hirohisa and Goldman, Nick and Thorne, Jeffrey L},
+  Year                     = {2003},
+  Number                   = {10},
+  Pages                    = {1692--1704},
+  Volume                   = {20},
+
+  Journal                  = {Molecular Biology and Evolution},
+  Publisher                = {SMBE}
 }
 
 @Article{Rodrigue2008,
