--- a/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
+++ b/tutorial_TeX/RB_TotalEvidenceDating_FBD_Tutorial/RB_TotalEvidenceDating_FBD_Tutorial_content.tex
@@ -1,7 +1,7 @@
 
 \section{Introduction}
 
-This tutorial...
+\citet{Ronquist2012a}
 
 \subsection{Models}
 
@@ -46,8 +46,7 @@ We provide the data file(s) which we will use in this tutorial.
 You may want to use your own data instead.
 In the \cl{data} folder, you will find the following files
 \begin{itemize}
-\item
-\cl{bears\_cytb.nex}: description of file/data (we also need more descriptive file names).
+\item \cl{bears\_extant\_cytb.nex}: description of file/data (we also need more descriptive file names).
 \end{itemize}
 
 
@@ -57,6 +56,7 @@ In the \cl{data} folder, you will find the following files
 \bigskip
 \subsection{Getting Started}
 
+We will complete this analysis in \RevBayes by entering the \Rev code interactively. 
 
 
 \bigskip
